# bpf-edr

./: .gitignore  CMakeLists.txt  Makefile  README.md  binds.json  rules.json  run_me.sh  setup.sh
bpf/: edr.bpf.c
debug/: edr_run.cpp
include/: common.h
src/: edr_run.cpp  keymap.cpp  keymap.h  main.cpp  math_engine.cpp  math_engine.h  reputation.cpp  reputation.h  seccomp_filter.cpp  seccomp_filter.h  seccomp_harness.cpp  seccomp_harness.h  seccomp_supervisor.cpp  seccomp_supervisor.h  sha256.cpp  sha256.h  tracker.cpp  tracker.h  ui.cpp  ui.h  ui_common.h  ui_repman.cpp
test/: chain_trigger.c  flood_trigger.c  run_flood.sh  run_validation.sh  scenario_0_benign.sh  scenario_1_single.sh  scenario_2_two_stage.sh  scenario_3_three_stage.sh  scenario_4_four_stage.sh  scenario_5_full_kill.sh  trigger_suite.c
